--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,12 @@ img {
   margin-right: 50px;
 }
 
+.current {
+  color: var(--accent-color);
+}
+
 .navigation-menu-item .current {
-  /* color: var(--accent-color); */
   position: relative;
-  display: block;
 }
 
 .current::after {
@@ -90,7 +92,6 @@ img {
   height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-menu-link:hover::after {
@@ -244,6 +245,7 @@ img {
 /* HERO_SECTION */
 
 .hero {
+  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(
