--- a/css/style.css
+++ b/css/style.css
@@ -51,13 +51,15 @@ img {
 }
 /* Header */
 
-.header .container {
+.header,
+.header-portfolio .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.header {
+.header,
+.header-portfolio {
   background-color: var(--title-color-secondary);
 }
 /*Navigation*/
@@ -201,15 +203,19 @@ img {
 .adress-mail-svg,
 .adress-tel-svg {
   display: inline-block;
-  width: 16px;
-  height: 11px;
   margin-right: 10px;
   fill: var(--text-main-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+.adress-mail-svg {
+  width: 16px;
+  height: 14px;
 }
 
 .adress-tel-svg {
-  width: 10px;
+  width: 14px;
   height: 15px;
 }
 
@@ -606,13 +612,20 @@ img {
 
 /*PORTFOLIO*/
 
-/* Buttons */
+/* ----HEADER-PORTFOLIO---- */
+
+.header-portfolio {
+  border-bottom: 1px solid #ececec;
+}
+
+/* ----FILTER BUTONS------ */
 
 .btn-filter-list {
   display: flex;
   justify-content: center;
   padding-top: 93px;
   padding-bottom: 50px;
+  border: none;
 }
 
 .btn-filter-item:not(:last-child) {
@@ -621,10 +634,16 @@ img {
 .btn-filter {
   background: #f5f4fa;
   border-radius: 4px;
+  border: none;
+  padding-left: 22px;
+  padding-top: 6px;
+  padding-right: 22px;
+  padding-bottom: 6px;
 }
 
 .btn-filter {
   box-sizing: border-box;
+  font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
