--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ img {
 }
 /* Header */
 
+.header .container {
+  display: flex;
+}
+
 .header,
 .header-portfolio .container {
   display: flex;
@@ -124,6 +128,8 @@ img {
 
 .nav-adress {
   display: flex;
+  align-items: center;
+  margin-left: auto;
 }
 
 .logo,
@@ -625,20 +631,12 @@ img {
   justify-content: center;
   padding-top: 93px;
   padding-bottom: 50px;
-  border: none;
+  border-color: transparent;
+  cursor: pointer;
 }
 
 .btn-filter-item:not(:last-child) {
   margin-right: 8px;
-}
-.btn-filter {
-  background: #f5f4fa;
-  border-radius: 4px;
-  border: none;
-  padding-left: 22px;
-  padding-top: 6px;
-  padding-right: 22px;
-  padding-bottom: 6px;
 }
 
 .btn-filter {
@@ -649,17 +647,22 @@ img {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+  border-radius: 4px;
+  border: none;
+  padding-left: 22px;
+  padding-top: 6px;
+  padding-right: 22px;
+  padding-bottom: 6px;
   cursor: pointer;
   color: var(--title-color-main);
   background: #f5f4fa;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color, background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-filter:hover,
 .btn-filter:focus {
   color: var(--text-secondary-color);
-  background-color: var(--accent-color);
+  background: var(--accent-color);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 3px 1px rgba(0, 0, 0, 0.1);
 }
@@ -763,8 +766,4 @@ img {
 .projects-list-item:hover .projects-description {
   /* opacity: 1; */
   transform: translateY(-107%);
-}
-
-.projects-title-box {
-  z-index: 1;
 }
