В портфолио обернул примеры работ в ссылки

--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ img {
     0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
-/*works list*/
+/*----OUR WORKS LIST----*/
 
 .our-projects {
   padding-bottom: 94px;
