Исправил позиционирование . Забыл добавить оверфлоу

--- a/css/style.css
+++ b/css/style.css
@@ -708,6 +708,7 @@ img {
   margin-right: 30px;
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
+  overflow: hidden;
 }
 
 .projects-list-item:nth-child(3n) {
