--- a/css/style.css
+++ b/css/style.css
@@ -268,13 +268,17 @@ img {
 
 .hero-section-button {
   display: flex;
+  justify-content: center;
   align-items: center;
-  text-align: center;
+  cursor: pointer;
   width: 200px;
   height: 50px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.875;
   letter-spacing: 0.06em;
+  color: var(--text-secondary-color);
   background-color: var(--accent-color);
-  /* color: var(--text-secondary-color); */
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -282,7 +286,11 @@ img {
   border: none;
 }
 
-.hero-button-text {
+.hero-section-button:focus {
+  outline: none;
+}
+
+/* .hero-button-text {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -292,8 +300,8 @@ img {
   letter-spacing: 0.06em;
   color: var(--text-secondary-color);
   margin-left: 32px;
-  /* padding: 32px 10px; */
-}
+  padding: 32px 10px;
+} */
 
 /* About Us Section */
 
@@ -616,7 +624,286 @@ img {
   background-color: var(--accent-color);
 }
 
-/*PORTFOLIO*/
+.form-footer {
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  max-width: 570px;
+}
+
+.form-item {
+  display: flex;
+}
+
+.form-footer .social-links-text {
+  flex-grow: 1;
+}
+
+.form-mail {
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: var(--text-secondary-color);
+  padding-left: 16px;
+}
+
+.form-mail:focus {
+  outline: none;
+}
+
+.form-mail::placeholder {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-mail:not(:placeholder-shown) {
+  border-color: var(--accent-color);
+}
+
+.form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: var(--text-secondary-color);
+  cursor: pointer;
+  background-color: var(--accent-color);
+  border: none;
+  border-radius: 4px;
+}
+
+.form-button:focus {
+  outline: none;
+}
+
+.form-footer-send {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  fill: var(--text-secondary-color);
+}
+
+/* !!!!!MODAL WINDOW!!!!! */
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  width: 528px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 40px;
+}
+
+.modal-title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 1.15;
+  margin-bottom: 30px;
+  color: var(--title-color-main);
+}
+
+.input-wrapper {
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.modal-icon {
+  position: absolute;
+  display: block;
+  top: 26%;
+  left: 4%;
+  width: 18px;
+  height: 18px;
+  fill: var(--title-color-main);
+}
+
+.modal-input {
+  display: block;
+  width: 448px;
+  height: 40px;
+  padding-left: 42px;
+  box-shadow: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-input:focus,
+.modal-input:not(:placeholder-shown) {
+  outline: none;
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
+
+.modal-input:focus + .modal-label,
+.modal-input:not(:placeholder-shown) + .modal-label {
+  transform: translate(-80%, -200%);
+  color: var(--accent-color);
+}
+
+.modal-input:focus ~ .modal-icon,
+.modal-input:not(:placeholder-shown) ~ .modal-icon {
+  fill: var(--accent-color);
+}
+
+.modal-label {
+  position: absolute;
+  top: 32%;
+  left: 10%;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--text-main-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-comment {
+  display: block;
+  resize: none;
+  height: 120px;
+  padding-left: 16px;
+  padding-top: 12px;
+  padding-right: 16px;
+  padding-bottom: 12px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-comment:focus,
+.modal-comment:not(:placeholder-shown) {
+  outline: none;
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
+
+.agriment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.agriment-text,
+.agriment-link {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--text-main-color);
+}
+
+.modal-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox-custom {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  border: 1px solid var(--title-color-main);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-checkbox:checked + .checkbox-custom {
+  background-color: var(--accent-color);
+  border: transparent;
+  background-image: url("../Images/Modal-Form-Icons/check-2.svg");
+  background-origin: border-box;
+}
+
+.agriment-link {
+  color: var(--accent-color);
+}
+
+.modal-button {
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: var(--text-secondary-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 4px;
+
+  border: none;
+}
+
+.modal-button:hover,
+.hero-section-button:hover {
+  background: #188ce8;
+}
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-image: url("../Images/Modal-Form-Icons/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.modal-close:hover {
+  background-image: url("../Images/Modal-Form-Icons/close-blue.svg");
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+/*-----------PORTFOLIO----------*/
 
 /* ----HEADER-PORTFOLIO---- */
 
